k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prefect-worker
  namespace: trading
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: prefect-worker
  template:
    metadata:
      labels:
        app: prefect-worker
    spec:
      containers:
        - name: prefect-worker
          image: ghcr.io/choizeus02/personal-data-hub:247b486fdc4cbf4a2eb0de8efb3b391362bb7bee
          command: ["prefect", "worker", "start", "--pool", "personal-data-hub-pool"]
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
