k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trading-api
  namespace: trading
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trading-api
  template:
    metadata:
      labels:
        app: trading-api
    spec:
      containers:
        - name: trading-api
          image: ghcr.io/choizeus02/personal-data-hub-api:ffb171dd1444eeea28d089a2177cef505cd65141
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: trading-api
  namespace: trading
spec:
  type: ClusterIP
  selector:
    app: trading-api
  ports:
    - port: 8000
      targetPort: 8000
