k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trading-frontend
  namespace: trading
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: trading-frontend
  template:
    metadata:
      labels:
        app: trading-frontend
    spec:
      containers:
        - name: trading-frontend
          image: ghcr.io/choizeus02/personal-data-hub-frontend:fd36b53847213da452cea662aabbc64b19acf998
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: trading-frontend
  namespace: trading
spec:
  type: ClusterIP
  selector:
    app: trading-frontend
  ports:
    - port: 80
      targetPort: 80
